content/vault/v1.4.x/content/docs/auth/token.mdx
---
layout: docs
page_title: Token - Auth Methods
sidebar_title: Tokens
description: The token store auth method is used to authenticate using tokens.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T14:43:40-05:00
last_modified: 2025-07-25T12:27:39-07:00
# END AUTO GENERATED METADATA
---

# Token Auth Method

The `token` method is built-in and automatically available at `/auth/token`. It
allows users to authenticate using a token, as well to create new tokens, revoke
secrets by token, and more.

When any other auth method returns an identity, Vault core invokes the
token method to create a new unique token for that identity.

The token store can also be used to bypass any other auth method:
you can create tokens directly, as well as perform a variety of other
operations on tokens such as renewal and revocation.

Please see the [token concepts](/vault/docs/concepts/tokens) page dedicated
to tokens.

## Authentication

### Via the CLI

```text
$ vault login token=<token>
```

### Via the API

The token is set directly as a header for the HTTP API. The header should be
either `X-Vault-Token: <token>` or `Authorization: Bearer <token>`.

## API

The Token auth method has a full HTTP API. Please see the
[Token auth method API](/vault/api-docs/auth/token) for more
details.
